# yew-ccxt-webpack

./: Cargo.toml  README.md  bootstrap.js  package.json  webpack.config.js
src/: app.rs  ccxt.rs  lib.rs
static/: index.html
